fix(form-inline): fix the issue of Form layout spacing in inline mode (#1377)

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -346,7 +346,6 @@
 @help-block-inline-gap: 10px;
 @control-label-width: 170px;
 @control-label-margin-right: 12px;
-@form-control-margin-left: 12px;
 // == Error Message
 @error-message-padding-vertical: 4px;
 @error-message-padding-horizontal: 8px;
